<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_24dp"
        android:title="@string/menu_sort"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_by_date"
                    android:title="@string/sort_by_date"
                    android:checked="true" />
                <item
                    android:id="@+id/sort_by_priority"
                    android:title="@string/sort_by_priority" />
                <item
                    android:id="@+id/sort_by_name"
                    android:title="@string/sort_by_name" />
            </group>
        </menu>
    </item>
    
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
        
    <item
        android:id="@+id/action_export_backup"
        android:title="Export Backup"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import_backup"
        android:title="Import Backup"
        android:icon="@android:drawable/ic_menu_upload"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />
        
</menu>
